RESOLVED FIXED 151752
Modern IDB: IDBTransaction::error is not exposed
https://bugs.webkit.org/show_bug.cgi?id=151752
Summary Modern IDB: IDBTransaction::error is not exposed
Brady Eidson
Reported 2015-12-02 10:12:43 PST
Modern IDB: IDBTransaction::error is not exposed There's at least 3 layout tests that hit this, so I'll get all three of those running.
Attachments
Patch v1 (12.44 KB, patch)
2015-12-02 11:40 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-12-02 11:40:14 PST
Created attachment 266458 [details] Patch v1
WebKit Commit Bot
Comment 2 2015-12-02 12:32:53 PST
Comment on attachment 266458 [details] Patch v1 Clearing flags on attachment: 266458 Committed r192956: <http://trac.webkit.org/changeset/192956>
WebKit Commit Bot
Comment 3 2015-12-02 12:32:55 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4 2015-12-02 17:01:37 PST
Comment on attachment 266458 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=266458&action=review > Source/WebCore/Modules/indexeddb/client/IDBTransactionImpl.cpp:119 > RefPtr<DOMError> IDBTransaction::error() const Why does this return a RefPtr? Should just return a DOMError*, not a RefPtr. Unless it manufactures a new error object.
Brady Eidson
Comment 5 2015-12-02 20:44:15 PST
(In reply to comment #4) > Comment on attachment 266458 [details] > Patch v1 > > View in context: > https://bugs.webkit.org/attachment.cgi?id=266458&action=review > > > Source/WebCore/Modules/indexeddb/client/IDBTransactionImpl.cpp:119 > > RefPtr<DOMError> IDBTransaction::error() const > > Why does this return a RefPtr? Should just return a DOMError*, not a RefPtr. > Unless it manufactures a new error object. All of the abstract bindings left behind from Legacy IDB inappropriately return RefPtrs like this. And, sadly, sometimes LegacyIDB does (incorrectly) manufacture a new object each call instead of retaining the same one for repeated calls. Instead of trying to clean up that mess while both implementations live side by side, I consider fixing it to be part of "Remove LegacyIDB"
Note You need to log in before you can comment on or make changes to this bug.