Modern IDB: IDBTransaction::error is not exposed. https://bugs.webkit.org/show_bug.cgi?id=151752

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least 3 failing tests now pass, plus changes to other faulty tests).

* Modules/indexeddb/client/IDBRequestImpl.cpp:
(WebCore::IDBClient::IDBRequest::dispatchEvent):
(WebCore::IDBClient::IDBRequest::uncaughtExceptionInEventHandler):
* Modules/indexeddb/client/IDBRequestImpl.h:

* Modules/indexeddb/client/IDBTransactionImpl.cpp:
(WebCore::IDBClient::IDBTransaction::error):
(WebCore::IDBClient::IDBTransaction::abortDueToFailedRequest):
(WebCore::IDBClient::IDBTransaction::abort):
(WebCore::IDBClient::IDBTransaction::didCreateIndexOnServer):
* Modules/indexeddb/client/IDBTransactionImpl.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/modern/basic-add.html:
* storage/indexeddb/modern/double-abort-expected.txt:
* storage/indexeddb/modern/index-3.html:
* storage/indexeddb/resources/transaction-error.js:
* storage/indexeddb/transaction-error-expected.txt:


Canonical link: https://commits.webkit.org/169902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192956 268f45cc-cd09-0410-ab3c-d52691b4dbfc